--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,77 +1,83 @@
 @import 'src/scss/global_variables.scss';
 
 .header {
-    display: grid;
-    grid-template-areas:
-        'logo menu search toolbar'
-        'nav nav nav nav';
-    grid-template-columns: 223px 125px 1fr auto;
-    grid-gap: 20px;
-    height: 46px;
-    align-items: center;
-    padding: 1rem 1rem;
+  display: grid;
+  align-items: center;
 
-    &__logo {
-        grid-area: logo;
-        height: 45px;
-        width: 223px;
-        margin: 0 auto;
+  height: 46px;
+  height: 100%;
+  padding: 1rem 1rem;
+
+  grid-gap: 20px;
+  grid-template-areas: 'logo menu search toolbar'
+  'nav nav nav nav';
+  grid-template-columns: 223px 125px 1fr auto;
+
+  &__logo {
+    width: 223px;
+    height: 45px;
+    margin: 0 auto;
+
+    grid-area: logo;
+  }
+  &__search {
+    grid-area: search;
+  }
+  &__toolbar {
+    display: flex;
+
+    grid-area: toolbar;
+  }
+  &__button {
+    &__text {
+      display: inline-block;
+
+      box-sizing: border-box;
+      padding-left: 12px;
     }
-    &__search {
-        grid-area: search;
+    & svg {
+      width: 18px;
+      height: 18px;
     }
-    &__toolbar {
-        grid-area: toolbar;
-        display: flex;
-    }
-    &__button {
-        &__text {
-            box-sizing: border-box;
-            display: inline-block;
-            padding-left: 12px;
-        }
-        & svg {
-            width: 18px;
-            height: 18px;
-        }
-    }
-    &__nav {
-        grid-area: nav;
-    }
-    &__menu {
-        grid-area: menu;
-        margin: 0 auto;
-    }
+  }
+  &__nav {
+    grid-area: nav;
+  }
+  &__menu {
+    margin: 0 auto;
+
+    grid-area: menu;
+  }
 }
 
 @media screen and (max-width: $viewport-sm) {
-    .header {
-        grid-template-columns: 48px 1fr 79px;
-        grid-gap: 5px;
-        grid-template-areas:
-            'menu logo toolbar'
-            'search search search'
-            'nav nav nav';
-        padding: 0.2rem;
+  .header {
+    padding: .2rem;
 
-        &__button {
-            background-color: transparent;
-            &__text {
-                display: none;
-            }
-        }
+    grid-gap: 5px;
+    grid-template-areas: 'menu logo toolbar'
+    'search search search'
+    'nav nav nav';
+    grid-template-columns: 48px 1fr 79px;
 
-        &__menu {
-            margin: 0;
-        }
-        &__search {
-            width: 100%;
-        }
-        &__toolbar {
-            overflow: hidden;
-            & > :nth-child(n + 2) {
-                display: none;
-            }
-        }
+    &__button {
+      background-color: transparent;
+      &__text {
+        display: none;
+      }
     }
+
+    &__menu {
+      margin: 0;
+    }
+    &__search {
+      width: 100%;
+    }
+    &__toolbar {
+      overflow: hidden;
+      & > :nth-child(n + 2) {
+        display: none;
+      }
+    }
+  }
 }
