--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,87 +5,84 @@
 @import '~swiper/components/scrollbar/scrollbar.scss';
 
 :root {
-    --color-brand-primary: rgb(255, 204, 0);
-
-    --color-brand-secondary: rgb(102, 68, 238);
-
-    --color-text-primary: rgb(0, 0, 0);
-    --color-text-primary-light: hsl(0, 0%, 20%);
-    --color-text-primary-lighter: hsl(0, 0%, 40%);
-    --color-text-primary-lightest: hsl(0, 0%, 60%);
-    --color-text-secondary: rgb(236, 0, 0);
-
-    --color-divider: rgb(230, 230, 230);
-
-    --radius: 4px;
+  --color-brand-primary: rgb(255, 204, 0);
+  --color-brand-secondary: rgb(102, 68, 238);
+  --color-divider: rgb(230, 230, 230);
+  --color-text-primary: rgb(0, 0, 0);
+  --color-text-primary-light: hsl(0, 0%, 20%);
+  --color-text-primary-lighter: hsl(0, 0%, 40%);
+  --color-text-primary-lightest: hsl(0, 0%, 60%);
+  --color-text-secondary: rgb(236, 0, 0);
+  --radius: 4px;
 }
 
 * {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    padding: 0;
-    margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+
+  margin: 0;
+  padding: 0;
 }
 
 button {
-    display: flex;
-    align-content: center;
-    padding: 12px 16px 12px 14px;
-    height: 44px;
-    -webkit-appearance: none;
-    border: 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: var(--radius);
-    position: relative;
-    transition: all 0.12s ease-out;
-    background-color: var(--color-brand-primary);
-    cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
 
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
+  position: relative;
 
-    &:focus {
-        outline: none;
-    }
+  display: flex;
+  align-content: center;
+
+  height: 44px;
+  padding: 12px 16px 12px 14px;
+
+  cursor: pointer;
+  transition: all .12s ease-out;
+
+  border: 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: var(--radius);
+  background-color: var(--color-brand-primary);
+
+  -webkit-appearance: none;
+
+  &:focus {
+    outline: none;
+  }
 }
 svg {
-    width: 18px;
-    height: 18px;
+  width: 18px;
+  height: 18px;
 }
 a {
-    &.link-menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        margin: 0 0.5rem;
-        color: var(--color-text-primary-lighter);
-        font-size: 0.85rem;
-        text-decoration: none;
-    }
-    &.link-menu svg {
-        margin: 5px auto;
-        width: 20px;
-        height: 20px;
-    }
-    &:hover {
-        color: var(--color-text-secondary);
-    }
-}
-.main {
-    padding: 1rem 5rem;
-}
+  &.link-menu {
+    font-size: .85rem;
 
-@media screen and (max-width: $viewport-sm) {
-    .main {
-        padding: 0;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin: 0 .5rem;
+
+    text-align: center;
+    text-decoration: none;
+
+    color: var(--color-text-primary-lighter);
+  }
+  &.link-menu svg {
+    width: 20px;
+    height: 20px;
+    margin: 5px auto;
+  }
+  &:hover {
+    color: var(--color-text-secondary);
+  }
 }
 
 .swiper-slide {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
+  display: flex;
+  overflow: hidden;
+  justify-content: center;
 }
