--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,9 @@
 
 :root {
   --color-brand-primary: rgb(255, 204, 0);
-  --color-brand-secondary: rgb(102, 68, 238);
+  --color-brand-secondary: hsl(252, 83%, 60%);
+  --color-brand-secondary-light: hsl(252, 83%, 70%);
+  --color-text-for-secondary: rgba(255,255,255);
   --color-divider: rgb(230, 230, 230);
   --color-text-primary: rgb(0, 0, 0);
   --color-text-primary-light: hsl(0, 0%, 20%);
@@ -57,6 +59,11 @@ svg {
   height: 18px;
 }
 a {
+  text-decoration: none;
+  transition: color ease-in-out 200ms;
+  &:visited {
+    color: var(--color-text-primary);
+  }
   &.link-menu {
     font-size: .85rem;
 
@@ -67,7 +74,6 @@ a {
     margin: 0 .5rem;
 
     text-align: center;
-    text-decoration: none;
 
     color: var(--color-text-primary-lighter);
   }
