--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,14 +1,37 @@
+@import 'src/scss/global_variables.scss';
+
 .nav {
   display: inline-flex;
+  overflow: hidden;
+  -moz-overflow: hidden;
+  overflow-x: auto;
+  margin: .5rem 0;
+
+  width: 100%;
+
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0px;
+  }
+  &::-webkit-scrollbar-thumb {
+    height: 0px;
+  }
+
   &__location{
     margin-right: 2rem;
     width: 223px;
+    @media screen and (max-width: $viewport-sm) {
+      display: none;
+    }
   }
   &__bar {
     display: inline-flex;
     list-style: none;
+    width: 100%;
   }
   &__element{
+    display: inline-block;
+    white-space: nowrap;
     margin: 0 .2rem;
     padding: 5px 10px;
     font-weight: 600;
