--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,3 +1,8 @@
 .slider {
   width: 100%;
+  :global{
+    .swiper-pagination-bullet-active {
+      background-color: var(--color-text-primary-lighter);
+    }
+  }
 }
