--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,5 +1,5 @@
+@import 'src/scss/global_variables.scss';
 .slider {
-  width: 100%;
   :global{
     .swiper-pagination-bullet-active {
       background-color: var(--color-text-primary-lighter);
