--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,24 @@
 .footer {
-  height: 300px;
+  display: flex;
+  padding: 1rem 3rem;
   background-color: var(--color-brand-secondary);
   color: var(--color-text-for-secondary);
+  &__contact, &__menu-wrap {
+    margin: 0 3rem;
+  }
+  &__menu {
+    list-style: none;
+  }
+  &__link {
+    padding: .3rem 0;
+    &:first-child {
+      padding-top: 0;
+    }
+  }
+  &__link a {
+    color: var(--color-text-for-secondary);
+    &:hover {
+      color: var(--color-text-secondary);
+    }
+  }
 }
