--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,16 +31,19 @@ html {
 h1 {
     font-weight: 600;
     font-size: 2rem;
-    color: var(--color-text-primary-light);
     padding-left: 1rem;
     padding-bottom: 1.5rem;
 }
 h2 {
     font-weight: 600;
     font-size: 1.8rem;
-    color: var(--color-text-primary-light);
     padding-left: 1rem;
     padding-bottom: 1.5rem;
+}
+h3 {
+    font-weight: 600;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
 }
 button {
   font-size: 16px;
