--- a/src/components/Advantage/Advantage.module.scss
+++ b/src/components/Advantage/Advantage.module.scss
@@ -1,11 +1,13 @@
 .advantage {
   display: inline-flex;
-  padding: 2rem 5rem;
-  background-color: var(--color-brand-primary-lightest);
 
+  padding: 2rem 5rem;
+
+  background-color: var(--color-brand-primary-lightest);
   &-wrap {
     display: flex;
     justify-content: center;
+
     width: 100%;
     margin: 2rem 0;
   }
@@ -19,6 +21,9 @@
     height: 48px;
   }
   &__description {
+    max-width: 200px;
+    height: 100%;
+    margin-right: 1rem;
     margin-left: 1rem;
   }
 }
