--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,13 @@
 .footer {
   display: flex;
+  flex-wrap: wrap-reverse;
+
   padding: 1rem 3rem;
-  background-color: var(--color-brand-secondary);
+
   color: var(--color-text-for-secondary);
+  background-color: var(--color-brand-secondary);
   &__contact, &__menu-wrap {
-    margin: 0 3rem;
+    margin: 1rem 3rem;
   }
   &__menu {
     list-style: none;
