--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,7 +1,77 @@
 @import 'src/scss/global_variables.scss';
 
 .menu {
+  position: absolute;
+  z-index: 100;
+  right: 0;
+  left: 0;
+
+  height: 500px;
+
+  transition: all ease-in-out 300ms 300ms;
+  transform: translateY(-999px);
+
+  background-color: var(--color-bg);
+  &-wrap {
+    position: absolute;
+    z-index: 100;
+    right: 0;
+    left: 0;
+
+    overflow: hidden;
+
+    height: 0;
+
+    transition: all ease-in-out 300ms 300ms;
+  }
   &__button {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+
+    position: relative;
+
+    display: flex;
+    align-content: center;
+
+    padding: 12px 16px 12px 14px;
+
+    cursor: pointer;
+    transition: all .12s ease-out;
+
+    border: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: var(--radius);
+    background-color: var(--color-brand-primary);
+
+    -webkit-appearance: none;
+    &::before {
+      width: 18px;
+      height: 18px;
+
+      content: '';
+
+      background-color: var(--color-text-primary);
+
+      -webkit-mask: url('../../../public/bars.svg') no-repeat 50% 50%;
+      mask: url('../../../public/bars.svg') no-repeat 50% 50%;
+      -webkit-mask-size: cover;
+      mask-size: cover;
+    }
+    &-container {
+      overflow: hidden;
+    }
+    &-input {
+      position: absolute;
+      left: -999px;
+      &:checked ~ .menu-wrap {
+        height: 100vh;
+      }
+      &:checked ~ .menu-wrap > .menu {
+        transform: translateY(0px);
+      }
+    }
     &__text {
       display: inline-block;
 
