--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -65,9 +65,10 @@ button {
 
   display: flex;
   align-content: center;
+  align-items: center;
 
   height: 44px;
-  padding: 12px 16px 12px 14px;
+  padding: .45rem 1.25rem;
 
   cursor: pointer;
   transition: all .12s ease-out;
