--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -10,6 +10,7 @@
   &__img {
     width: 100%;
     height: 100%;
+
     object-fit: cover;
   }
 
@@ -18,16 +19,20 @@
       font-size: 1.5rem;
     }
     &-old {
-      margin-left: .5rem;
       font-size: 1.1rem;
       font-weight: 100;
+
+      margin-left: .5rem;
+
       text-decoration: line-through;
+
       color: var(--color-text-primary-lighter);
     }
     &-current, &-old {
       &::after {
-        content: '₽';
         font-size: .7em;
+
+        content: '₽';
       }
     }
   }
@@ -38,7 +43,7 @@
       color: var(--color-brand-secondary);
     }
     &:hover {
-      color: var(--color-text-secondary)
+      color: var(--color-text-secondary);
     }
   }
   :global {
