--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,8 @@
   // Дополнительный цвет
   --color-brand-secondary: #78a5a3;
   --color-brand-secondary-light: #97bab8;
+  --color-brand-secondary-lighter: hsl(177, 20%, 76%);
+  --color-brand-secondary-lightest: hsl(177, 20%, 86%);
   --color-divider: hsl(0, 0%, 90%);
   // Цвет текста
   --color-text-for-secondary: #fff;
