--- a/src/components/Layout/LayoutAdmin.module.scss
+++ b/src/components/Layout/LayoutAdmin.module.scss
@@ -13,7 +13,7 @@
     width: 300px;
     height: 100vh;
 
-    box-shadow: 0 0 16px 1px rgba(0,0,0,.25);
+    box-shadow: 0 0 26px 0 rgba(0,0,0,.15);
 
     grid-area: sidebar;
   }
@@ -27,10 +27,11 @@
 .sidebar {
   &__nav-top {
     display: flex;
+    overflow: hidden;
     justify-content: space-between;
 
     border-bottom: 1px solid var(--color-divider);
-    box-shadow: 0 0 16px 1px rgba(0,0,0,.25);
+    box-shadow: 0 0 26px 0 rgba(0,0,0,.15);
   }
   &__title {
     font-weight: 600;
