--- a/src/components/Layout/LayoutAdmin.module.scss
+++ b/src/components/Layout/LayoutAdmin.module.scss
@@ -15,7 +15,7 @@
     width: 300px;
     height: 100vh;
 
-    transition: all ease-in-out 100ms;
+    transition: all ease-in 300ms;
 
     background-color: #fff;
     box-shadow: 0 0 26px 0 rgba(0,0,0,.15);
@@ -97,6 +97,10 @@
   flex-direction: row;
   justify-content: flex-end;
 }
+.-hide .sidebar__link__text {
+  opacity: 0;
+}
+
 .-active {
   background-color: var(--color-brand-secondary-lightest);
 }
