--- a/src/components/AdminHeader/AdminHeader.module.scss
+++ b/src/components/AdminHeader/AdminHeader.module.scss
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   width: 100%;
   padding: 21px 50px 0 70px;
-
   border-bottom: 1px solid var(--color-divider);
   @media screen and (max-width: $viewport-sm) {
     flex-direction: column;
@@ -28,7 +27,7 @@
 
     height: 100%;
     margin-left: 10px;
-    padding: .2rem 0;
+    padding: 0.2rem 0;
     &:first-child {
       margin: 0;
     }
