--- a/src/components/Layout/LayoutAdmin.module.scss
+++ b/src/components/Layout/LayoutAdmin.module.scss
@@ -6,18 +6,14 @@
   &__sidebar {
     position: absolute;
     z-index: 100;
-
     width: 300px;
     height: 100vh;
-
-    transition: all ease-in 300ms;
-
     background-color: #fff;
-    box-shadow: 0 0 26px 0 rgba(0,0,0,.15);
+    box-shadow: 0 0 26px 0 rgba(0, 0, 0, 0.15);
+    transition: all ease-in 300ms;
   }
   &__main {
     margin-left: 250px;
-
     transition: all ease-in 300ms;
     @media screen and (max-width: $viewport-sm) {
       margin-left: 0;
@@ -28,35 +24,31 @@
 .sidebar {
   &__nav-top {
     display: flex;
-    overflow: hidden;
     justify-content: space-between;
-
+    overflow: hidden;
     border-bottom: 1px solid var(--color-divider);
-    box-shadow: 0 0 26px 0 rgba(0,0,0,.15);
+    box-shadow: 0 0 26px 0 rgba(0, 0, 0, 0.15);
   }
   &__title {
-    font-weight: 600;
-
     display: flex;
     align-items: center;
     justify-content: center;
 
     width: 100%;
+    font-weight: 600;
   }
   &__button-hide {
     flex: 1;
-
     background-color: transparent;
     &::after {
       width: 18px;
       height: 18px;
-
-      content: '';
-      transition: all ease-in-out 300ms;
-
       background-color: var(--color-text-primary);
+      transition: all ease-in-out 300ms;
+      content: '';
 
-      -webkit-mask: url('../../../public/svg/angle-double-left.svg') no-repeat 50% 50%;
+      -webkit-mask: url('../../../public/svg/angle-double-left.svg') no-repeat
+        50% 50%;
       mask: url('../../../public/svg/angle-double-left.svg') no-repeat 50% 50%;
       -webkit-mask-size: cover;
       mask-size: cover;
@@ -89,7 +81,8 @@
   grid-template-columns: 50px auto;
 }
 .-hide .sidebar__button-hide::after {
-  -webkit-mask: url('../../../public/svg/angle-double-right.svg') no-repeat 50% 50%;
+  -webkit-mask: url('../../../public/svg/angle-double-right.svg') no-repeat 50%
+    50%;
   mask: url('../../../public/svg/angle-double-right.svg') no-repeat 50% 50%;
 }
 .-hide .sidebar__link {
