--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -2,20 +2,33 @@
 
 .menu {
   position: absolute;
-  z-index: 100;
   right: 0;
   left: 0;
-
+  z-index: 100;
   display: flex;
   flex-wrap: wrap;
 
   padding: 2rem;
-
-  transition: all linear 600ms 200ms;
-  transform: translateY(-999px);
-
   background-color: var(--color-bg);
-  box-shadow: 0 10px 10px 1px rgba(0,0,0,.5);
+  box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 0.5);
+  transform: translateY(-999px);
+  transition: all linear 600ms 200ms;
+
+  @media screen and (max-width: $viewport-sm) {
+    justify-content: space-between;
+
+    padding: 0 0.8rem;
+    padding-bottom: 0.8rem;
+    &__location {
+      display: block;
+    }
+    &__button {
+      background-color: transparent;
+    }
+    &__text {
+      display: none;
+    }
+  }
 
   &__location {
     display: none;
@@ -25,49 +38,41 @@
   }
   &-wrap {
     position: absolute;
-    z-index: 100;
     right: 0;
     left: 0;
-
+    z-index: 100;
     display: flex;
 
     width: 100%;
     height: 0;
-
-    transition: all linear 200ms 0ms;
-
     opacity: 0;
+    transition: all linear 200ms 0ms;
   }
   &__button {
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 20px;
-
     position: relative;
-
     display: flex;
     align-content: center;
 
     padding: 12px 16px 12px 14px;
-
-    cursor: pointer;
-    transition: all .12s ease-out;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    background-color: var(--color-brand-primary);
 
     border: 0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: var(--radius);
-    background-color: var(--color-brand-primary);
 
+    cursor: pointer;
+    transition: all 0.12s ease-out;
     -webkit-appearance: none;
     &::before {
       width: 18px;
       height: 18px;
-
-      content: '';
-      transition: all ease-in-out 200ms;
-
       background-color: var(--color-text-primary);
+      transition: all ease-in-out 200ms;
+      content: '';
 
       -webkit-mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
       mask: url('../../../public/svg/bars.svg') no-repeat 50% 50%;
@@ -80,43 +85,25 @@
     &-input {
       position: absolute;
       left: -999px;
-      &:checked ~ .menu__button::before {
-        -webkit-mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
-        mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
-      }
-      &:checked ~ .menu-wrap {
-        height: 100vh;
-
-        transition: all linear 200ms 200ms;
-
-        opacity: 1;
-      }
-      &:checked ~ .menu-wrap > .menu {
-        transition: all linear 200ms 0ms;
-        transform: translateY(0px);
-      }
+    }
+    &-input:checked ~ .menu__button::before {
+      -webkit-mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
+      mask: url('../../../public/svg/times.svg') no-repeat 50% 50%;
+    }
+    &-input:checked ~ .menu-wrap {
+      height: 100vh;
+      opacity: 1;
+      transition: all linear 200ms 200ms;
+    }
+    &-input:checked ~ .menu-wrap > .menu {
+      transform: translateY(0px);
+      transition: all linear 200ms 0ms;
     }
     &__text {
       display: inline-block;
 
       box-sizing: border-box;
       padding-left: 12px;
-    }
-  }
-
-  @media screen and (max-width: $viewport-sm) {
-    justify-content: space-between;
-
-    padding: 0 .8rem;
-    padding-bottom: .8rem;
-    &__location {
-      display: block;
-    }
-    &__button {
-      background-color: transparent;
-      &__text {
-        display: none;
-      }
     }
   }
 }
