--- a/src/components/AdminHeader/AdminHeader.module.scss
+++ b/src/components/AdminHeader/AdminHeader.module.scss
@@ -7,27 +7,20 @@
   width: 100%;
   padding: 21px 50px 0 70px;
   border-bottom: 1px solid var(--color-divider);
-  @media screen and (max-width: $viewport-sm) {
-    flex-direction: column;
 
-    padding-right: 0;
-  }
   &__links {
     display: inline-flex;
 
     height: 100%;
-    @media screen and (max-width: $viewport-sm) {
-      padding-bottom: 20px;
-      padding-left: 14px;
-    }
   }
   &__link {
+    position: relative;
     display: flex;
     justify-content: space-between;
 
     height: 100%;
     margin-left: 10px;
-    padding: 0.2rem 0;
+    padding: 0.4rem 0;
     &:first-child {
       margin: 0;
     }
@@ -37,6 +30,37 @@
   }
 }
 
+@media screen and (max-width: $viewport-sm) {
+  .header {
+    flex-direction: column;
+
+    padding-right: 0;
+    &__links {
+      padding-bottom: 20px;
+      padding-left: 14px;
+    }
+  }
+}
+
 .-active {
-  border-bottom: 2px solid var(--color-text-secondary);
+  &::after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-text-secondary);
+    animation: active 300ms ease-in-out;
+    content: '';
+  }
+}
+
+@keyframes active {
+  0% {
+    transform: scaleX(0.5);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
