--- a/src/components/AdminHeader/AdminHeader.module.scss
+++ b/src/components/AdminHeader/AdminHeader.module.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   width: 100%;
   padding: 21px 50px 0 70px;
+
   border-bottom: 1px solid var(--color-divider);
 
   &__links {
@@ -15,12 +16,15 @@
   }
   &__link {
     position: relative;
+
     display: flex;
     justify-content: space-between;
 
     height: 100%;
     margin-left: 10px;
-    padding: 0.4rem 0;
+    padding: .4rem 0;
+
+    cursor: pointer;
     &:first-child {
       margin: 0;
     }
@@ -48,17 +52,20 @@
     right: 0;
     bottom: 0;
     left: 0;
+
     width: 100%;
     height: 2px;
-    background-color: var(--color-text-secondary);
-    animation: active 300ms ease-in-out;
+
     content: '';
+    animation: active 300ms ease-in-out;
+
+    background-color: var(--color-text-secondary);
   }
 }
 
 @keyframes active {
   0% {
-    transform: scaleX(0.5);
+    transform: scaleX(.5);
   }
   100% {
     transform: scaleX(1);
