--- a/admin/src/components/AdminBrandCreate/adminbrandcreate.module.scss
+++ b/admin/src/components/AdminBrandCreate/adminbrandcreate.module.scss
@@ -27,7 +27,7 @@
   height: 40px;
   &__input {
     padding: 0.25rem 0.75rem;
-    border: 2px solid var(--color-brand-primary);
+    border: 2px solid var(--color-primary);
     border-radius: 3px;
     &:focus {
       outline-color: var(--color-brand-secondary);
