--- a/admin/src/components/AdminBrandList/adminbrandlist.module.scss
+++ b/admin/src/components/AdminBrandList/adminbrandlist.module.scss
@@ -17,6 +17,6 @@
 
   border: 1px solid var(--color-divider);
   &:hover {
-    background-color: var(--color-brand-primary-lighter);
+    background-color: var(--color-primary-lighter);
   }
 }
