--- a/client/src/components/Menu/menu.module.scss
+++ b/client/src/components/Menu/menu.module.scss
@@ -57,7 +57,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
-    background-color: var(--color-brand-primary);
+    background-color: var(--color-primary);
 
     border: 0;
     -webkit-border-radius: 4px;
