--- a/client/src/components/Search/search.module.scss
+++ b/client/src/components/Search/search.module.scss
@@ -1,7 +1,7 @@
 .search {
   display: flex;
   padding: 2px;
-  background-color: var(--color-brand-primary);
+  background-color: var(--color-primary);
   border-radius: var(--radius);
 
   &__input {
