--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -8,10 +8,13 @@
 :root {
   --color-bg: #fff;
   // Основной цвет
-  --color-primary: #e1b26b;
-  --color-primary-light: #e9c895;
-  --color-primary-lighter: #f2dec0;
-  --color-primary-lightest: #fbf4ea;
+  --color-primary: hsl(36, 66%, 65%);
+  --color-primary-light: hsl(36, 66%, 68%);
+  --color-primary-lighter: hsl(36, 66%, 72%);
+  --color-primary-lightest: hsl(35, 68%, 75%);
+  --color-primary-dark: hsl(36, 66%, 55%);
+  --color-primary-darker: hsl(36, 66%, 52%);
+  --color-primary-darkest: hsl(36, 66%, 48%);
   // Дополнительный цвет
   --color-brand-secondary: #78a5a3;
   --color-brand-secondary-light: #97bab8;
