--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -24,7 +24,7 @@
   // Цвет текста
   --color-text-for-secondary: #fff;
   --color-text-primary: #434b5b;
-  --color-text-primary-light: #6f7c95;
+  --color-text-primary-light: #fff;
   --color-text-primary-lighter: #aab1c0;
   --color-text-primary-lightest: #e5e7eb;
   --color-text-secondary: #ce5955;
